# bluetooth-transmitter

./: .clangd.in  .gitignore  CMakeLists.txt  LICENSE  flake.nix  readme.md  sdkconfig  sdkconfig.old
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0wq95rgv0jdwav39a220d4lqk5f80lbb-source  9x3bfvfsarl87nsynvjwx6a548hx3fxs-source  vhb3wbblkj1b121l7la8cbi83nkjq9gc-source
bluetooth-transmitter-pcb/: bluetooth-transmitter.kicad_pcb  bluetooth-transmitter.kicad_prl  bluetooth-transmitter.kicad_pro  bluetooth-transmitter.kicad_sch  bluetooth-transmitter.kicad_sch-bak  bluetooth-transmitter.step  fp-info-cache  fp-lib-table  sym-lib-table
bluetooth-transmitter-pcb/PCM1808.pretty/: SOP65P640X120-14N.kicad_mod
case-design/: bt-case.stl  bt-lid.stl
components/audio-stream/: CMakeLists.txt
components/audio-stream/include/: audio_stream.h
components/audio-stream/src/: audio_stream.c
components/bluetooth-lib/: CMakeLists.txt
components/bluetooth-lib/include/: bt_lib.h  utils.h
components/bluetooth-lib/src/: bt_lib.c  utils.c
components/dispatcher/: CMakeLists.txt
components/dispatcher/include/: dispatcher.h
components/dispatcher/src/: dispatcher.c
components/encoder/: CMakeLists.txt
components/encoder/include/: encoder.h
components/encoder/src/: encoder.c
components/main/: CMakeLists.txt
components/main/include/: menu.h
components/main/src/: main.c  (+1 more)
components/oled-display/: CMakeLists.txt
keys-design/: bt-case.ipt  bt-lid.ipt
main/src/: main.c
(+5 files in other folders)
